# clawchestra-hackathon

./: .cursorrules  .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CLAWCHESTRA.md  OVERVIEW.md  PROJECT.md  README.md  REVIEW-FIXES.md  ROADMAP.md  SPEC.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  update.sh  vite.config.ts
.githooks/: pre-commit
docs/: 2026-02-18-chat-integration-architectural-review.md  AGENTS.md  ARCHITECTURE-V2-SPEC.md  CHAT-DRAWER-SPEC.md  DESIGN_PRINCIPLES.md  SCHEMA.md  USAGE.md  index.html  styles.css
roadmap/: app-ux-review.md  architecture-direction.md  architecture-v2-1-hardening.md  architecture-v2.md  ask-openclaw-selection.md  branch-aware-spec-viewing.md  chat-abort-button.md  chat-cycle-navigation.md  chat-drawer-search.md  chat-drawer-ui.md  chat-infrastructure.md  chat-persistence.md  chat-ux-overhaul.md  clawchestra-ai-website.md  cloud-agent-sync.md  cmd-k-search.md  collapsible-sidebar.md  custom-card-actions.md  deliverable-priority-view.md  first-friend-readiness.md  fix-roadmap-spec-links.md  flexible-layout-orientation.md  git-sync.md  github-api-403-errors.md  hover-peek-sidebar.md  hub-session-pairing.md  improve-markdown-rendering.md  non-code-projects.md  openclaw-integration-config.md  openclaw-onboarding.md  openclaw-platform-interaction-audit.md  openclaw-tui-terminal.md  openclaw-version-detection.md  per-chat-agent-routing.md  persistent-thin-sidebar.md  pre-release-hardening.md  project-modal-improvements.md  quick-delete.md  rate-limit-resilience.md  responsive-layout-constraints.md  (+11 more)
scripts/: generate-icons.py  inject-current-branch.sh  reset-test.sh  sync-agent-compliance.sh  test-instance.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_persistence.rs  injection.rs  lib.rs  locking.rs  main.rs  merge.rs  migration.rs  state.rs  sync.rs  util.rs  validation.rs  watcher.rs
src-tauri/src/commands/: chat.rs  git.rs  hub_chats.rs  mod.rs  terminal.rs  update.rs
todos/: 001-complete-p1-build-pipeline-dashboard.md  002-complete-p1-dirty-flag-cleared-before-io.md  003-complete-p1-toctou-own-write-detection.md  (+23 more)
website/: CNAME  (+5 more)
(+279 files in other folders)
