[package]
name = "clawchestra"
version = "0.1.0"
description = "Clawchestra"
authors = ["Pierce Kearns"]
edition = "2021"

[lib]
name = "clawchestra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-websocket = "2"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-window-state = "2"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
notify = "7"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time", "rt"] }
regex = "1"
serde_yaml = "0.9"
chrono = "0.4"
keyring = "2"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
